Remove position attr value to fix bug where hover-links bleed through unrelated hovercards

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -395,7 +395,6 @@ em, i {
 }
 
 .hover-link {
-  position: relative;
   display: inline-block;
 }
 
